--- a/HTML/Proyectofinal/index.html
+++ b/HTML/Proyectofinal/index.html
@@ -15,7 +15,7 @@
   <meta property="og:image" content="">
   <meta property="og:image:alt" content="">
 
-  <!-- Esta es la parte que hace que se vea la imagen en el navegador en lugar de un texto-->
+  <!-- Esta es la parte que hace que se vea la imagen en el navegador en lugar de un texto----->
   <link rel="icon" href="img/logo.png" sizes="any">
   <link rel="icon" href="img/logo.png" type="image/svg+xml">
   <link rel="apple-touch-icon" href="icon.png">
@@ -25,7 +25,7 @@
 </head>
 
 <body>
-<!-- header con navegación ---------------------------------------------------->
+<!-- header con navegación -------------------------------------------------------------------->
 <header>
   <!--logo con el nombre y la imagen-->
   <div class="logo">
@@ -34,17 +34,26 @@
     </a>
 
   </div>
-  <!--NAV con listado de ubicacion reservas y menu estos sin enlace por el momento-->
+  <!--NAV con listado de ubicacion reservas y menu estos sin enlace por el momento-------->
   <nav>
     <ul class="nav-right">
-      <!--Esto es una prueba para ver como cambia la url a lo que ponga en el boton-->
+      <!--Esto es una prueba para ver como cambia la url a lo que ponga en el boton-------->
       <li><a href="#ubicacion">UBICACIÓN</a></li>
       <li><a href="#reservas">RESERVAS</a></li>
       <li><a href="#menu">MENÚ</a></li>
     </ul>
+    <button class="hamburger">&#9776;</button>
   </nav>
   <div class="logo-usuario">
     <img src="" alt="" />
+  </div>
+
+  <!--logo con el nombre y la imagen-->
+  <div class="login">
+    <a href="pages/form.html" target="">
+      <img src="img/login.png" alt="Iniciar Sesion o Registrarse">
+    </a>
+
   </div>
 
 </header>
@@ -83,6 +92,7 @@
     <img src="img/imgSection2Menu.png" alt="Imagen Fondo Menu" class="img-fotomenu">
     </a>
   </div>
+
 </section>
 <!-- seccion que tiene solo una foto Modificable a futuro -------------------------------------->
 <section class="seccion-destinoPerfecto">
@@ -97,13 +107,9 @@
       <h2>El destino perfecto para cualquier ocasión</h2>
       <p>
         Cuidamos hasta el más mínimo
-        <br>
         detalle con nuestros clientes,
-        <br>
         no dude en pedir cualquier
-        <br>
         plato que se le ocurra de
-        <br>
         nuestro menú.
       </p>
 
@@ -121,7 +127,7 @@
 </section>
 </main>
 
-<!-- Footer -->
+<!-- Footer -------------------------------------------------------------------------------------------->
 <footer>
   <!-- Primera sección: Suscripción -->
   <section class="suscripcion">
