--- a/DAM2/PROGRAMCIO/JAVA/Desarrollo de Interfaces/javahelp/javaHelpEjemplo/src/main/resources/ayuda/html/cipoteg.html
+++ b/DAM2/PROGRAMCIO/JAVA/Desarrollo de Interfaces/javahelp/javaHelpEjemplo/src/main/resources/ayuda/html/cipoteg.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <!--
 Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
@@ -5,10 +6,10 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
 -->
 <html>
     <head>
-        <title>Cipote</title>
+        <title>Cipote de calvo</title>
     </head>
     <body>
-        <h1>Cipote</h1>
-        <p>Aplicación de ejemplo para alumnos.</p>
+        <h1>Cipote gordo</h1>
+        <p>Aplicación de ejemplo para alumnos cipotudos.</p>
     </body>
 </html>
